--- a/Html/proyectos.html
+++ b/Html/proyectos.html
@@ -30,11 +30,11 @@
     <main>
 
         <!--proyecto1  -->
-        <section class="proyectos-titulo">
+        <section class="contenedorTituloProyectos">
                 <h5 class="titulo-proyecto">Proyectos</h5>
         </section>
 
-        <section class="proyectos-container border border-danger">
+        <!-- <section class="proyectos-container border border-danger">
             <section class="proyectos">
                 <section class="tarjetas-proyecto">
                     <div class="card mb-3 " style="max-width: 800px;">
@@ -81,7 +81,7 @@
                 <section class="tarjetas-proyecto">
                     <div class="card mb-3" style="max-width: 800px;">
                         <div class="row g-0">
-                          <div class="col-md-4">
+                          <div class="col-md-4"> -->
                             <img src="../images/reloj_de_arena.png" class="img-fluid rounded-start" alt="...">
                           </div>
                           <div class="col-md-8">
